side panel, add/edit course added

--- a/id-verification-system/Course_View.resx
+++ b/id-verification-system/Course_View.resx
@@ -118,6 +118,141 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAc0AAACdCAYAAADWvCNeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAHlZJREFUeF7tnWuMXdV1xwPxeGbsGb8Y25kwGINtTBxjCAbCy2TSBHCIsS8IGmNc
+        yVVE+hEj9UtJVLcSShqpggCVApIpKZYS1MhxwbhOpSZpiJQggWTUhkqhKiBVLWlTKYkS+qH9MF3/zV7b
+        66y7z7n3ztzxuY//ln7ae6/9OI9r+++1X+cD3Qz7TzQ2HjjVOHT/S43HJD5x/6nG2wdfavxS8nOEEEJI
+        O0TdOHPgZOMfhK8deLFx6JDoy9zc3HkiNedpbOifIA+y6uDJxp9AIP2DE0IIIV3jZOP1Ay/ue/xzzzc2
+        ifyMCEsiH4ycbwU1pnsjiFDOykP8oOmhCCGEkEXmvhN7j+199vbdIkcTwjJhXBgVVEw/eOTIkfMlTt5o
+        LSJ66HRjo9wwxZIQQkjtfO7be7616/DOqycnJy8QiVo1NTU1KfFyYUxYKkBArXieO+GUGzzMOUpCCCG9
+        xl3P7X5UZOoiYVpYK6wWVgjwQuGBLlHPUzxOiRYxYN5SboreJSGEkJ7lnuc/+/c77t36OyJbmPPcIHxY
+        gICuEiCeyfNctKHaMBzLRT6EEEL6gPtO7P33bXdu+ozI10eFrWNjY5dIfKEwJcDzxNwn5j2xcKi7w7UU
+        TEIIIf0GhPPyz1xy58jIyMdEyq4QLhcgnvA81wiY9wxDtkLwOhfseVIwCSGE9Cv3fWfvf2z59MV3i5xd
+        J1wtQDy3CBsmJibWSbxSUK9zYcO1YQ6TgkkIIaSP2X/8znfXbl2DbSk3ChDPq4RtArzO6VUSJA7CGRcJ
+        zS+IYD6buwFCCCGkn9h39LbTImu3CDcvWbLkBol3CleMjo5uGh8fv3DFihUYrh3fuXOnCmdnHmc8Bi97
+        cUIIIaTf+PRXdz0p8gbh3CVAOK8RdggYrsUiIWxPGZ+dndU9ne0FzmMSQggZNO57Yd9vpras3iMy9wnx
+        NiGeNwnXCjvE44RwYoEQhmpxIAKEsz1vk8OyhBBCBpE9X//Ut0XmZiMF4RQ2LV++/ENr1qzBlhSsqtXt
+        KOUhHo+XvRghhBDS72yavWi/eJpBOCXeJUA4MVS7Pe7nXLd+/XocwRfmNytPDqKXSQghZJCBtylCiSFa
+        COcnhFskfePIyAgWB31E2KALg4RybzMek8czZQkhhAwsYW7z8jC3qcO0EM5dIpoflxgHIVy2bNkynF2L
+        YVocuQfhbA5cMUsIIWQYuPX9lbRWNMN2FBFO7OPcLlwyMTGB82pxVu2S7KEHB081TuQ6J4QQQgaJe755
+        xxmRPRVNBcO02Ipy9ejo6FaJsZp2xbZt2+BtNn8VRTri0CwhhJCBB0O0InvwMINgYn4T85ySxjAtvM0r
+        xsbGNkqM73NiC0pxiPbgycZsrmNCCCFkENm+f+vnRf7UywwCKsKZvE0Bezen8UHreODB2SHag6caD+Y6
+        JYQQQgaReEKQimbwNiUOc5sC9m7ifFp80BonBWHf5tntJ9LBY75DQgghZFDRgw6iWKpwhtOC4kpaHHhw
+        qTA1MzMzfu+9954douUiIEIIIcNEPMS9IJoRDNXiiyhhiHb58uXrJZ4Q8Pmw94dopYMf+A4JIYSQQUVX
+        0EI0FeQjN4m3iVOCcNhBWEUrUDQJIYQMJxDNjFhqHqtoMa/5UWGDsGrz5s2Y16RoEkIIGT5UNEUC9Ug9
+        CKZuQ9ETgq4QLo7H6mHryfufDJMOKJqEEEKGBiOaStq3KehioCtHR0fDYiBBz6KlaBJCCBkuzKlASSyd
+        x3m9cJWK5vT09LK0glY6oGgSQggZGnKiacB+zRvE27xK4k1COIeWokkIIWQoicOzOcFU0cS2E3iamyWG
+        aJ7dqykdUDQJIYQMDcbTBIUhWoipEERTUNHEF08omoQQQoYPvxDIpoUwPCt8DJ7mxMTEOsxpSh5n0FI0
+        CSGEDBfO08yJJjxNfJQanuY6gZ4mIYSQ4aRKNCVd8DQl5kIgQgghw4sRzcJiIBHMcGi7pINoCsHT5JYT
+        QgghQ4ud04RQIhZs3CSa8buaFE1CCCHDhR+ejahoBk8z7tMMw7NcCEQIIWRoiaIZRNJ4nEE4o+dZ8DQF
+        LgQihBAynFhPU8UyphGrp6miyYVAhBBChpeMaCbhRCy23PAsRZMQQsjwkZnTVMEETVtOKJqEEEKGFhVN
+        8Sg/GWMroBBNe7gBj9EjhBAyvBjRDB+hdqKpZ8+qp8mFQIT0Kw//6KG5p19/vAnYc/UJIc1Y0ZTYDs2C
+        gqc5MTFBT5OQfuX4z741lwuw5+q34oG/u3/uwe9/IVtGyKBSshBI8yqa4dNgUTTHBYomqRd4R//83//U
+        Uzz26ley99ordEs0D4tQ4nk1vPd/v507/ub8hJeQfgOiCbFURAqteCbRFLYI9DRJb/DIT74U/8nunfDU
+        649n77VX6IZoQjB/8T//GVsWww//7XvZNoQMEtbTtIhwpn2aAuY0g2hy9SzpCSiandMN0XxZhLEqPPKT
+        L2bbETIouDlNFUyNk2gK9DRJ70DR7JxuiOY7v34rtsqHYz89mm1HyKCgw7MigQWcp6mHG6xbv379cokp
+        mqReKJqd0w3R/MV7+aFZDZ30RUg/YjxNL5qIb5G4cLiBQE+T1E+VaOIf9jp49NUvZ++1V+iGaLYcnv1x
+        58Oz+C1z75NzpKQXaSGa4Rg9iXlgO+ktqkTzwe9xG0SObogmVi1jtWwuYEVtrk0ryn7L+fZHyGLSYiEQ
+        sAe2QzQ5PEvqh6LZOd0QTQDh/C/xBG147d1X5h747v3Z+q2gaJJ+okQ0dVFQmtO0w7P8ygmpHYpm53RL
+        NJWHX35o7pEff2neYqlQNEk/4UXTDdNCPHWfJodnSe9A0eycbotmt6Bokn7CiKZ6lwGIp5DzNJfPzs4u
+        kZiiSeqDotk5FE1CFo71NDGPGT3NIKDIS2wXAvFwA9IbUDQ7h6JJyMJR0YwCmTzNSNM+TYGiSeqHotk5
+        FE1CFk5uIVD0NkGY0xwZGQmiqV854UIgUjsUzc6haBKycJxo6rBs+CC1YI/RS54mRZPUDkWzcyiahCyc
+        nKdp8CcCcXiW9AbDJpr4biUOQ7dgywe+aZmrn4OiScjCMXOaKpRYDASPE3HwNO3wLBcCkZ5g0EUTz3f6
+        rRfn3vlV9QHpCKiD4+1afWGkW6J57I1ngqB5Hv7hQ9n6Stk3UMue8b3//W22fo5e/5YpGRwgmiqYVjhj
+        PnmaAj1N0jsMqmg+/foTLb8kUhXwrUv0keu7W6JZdv5sq3Nnq36zhYZePyyfDA4thmfDQiAhiKYuBBK4
+        T5PUy6CJpnph3QoQT3ww2l6DoknIwsmIpnqZSPvDDehpkt5gkEQTw51lh6AvJGB40355haJJyMJxohkE
+        0wDRvF7AQqAtxtOkaJJ6GRTRPP7m8/GuFy88FYdrKZqELBwzp6mnAcHL1DTmNLFPM6yeFdFcx4VApCcY
+        BNHsRDAxdHv6X1+ce/rM4wEclI4Ygvfaz18JXmVVwCKhukUTQ9C572aW3Tvsufo5ev1bpmRwUE9TBdOh
+        q2fTMXoC5zRJ/fS7aEJAWgWIBgSt3a+IwNvyn+zSgDlOiG4unCvRLKPst8R/FHL1CamT6Gn6YdkgotEe
+        vnLCOU3SU/SzaGJvJUSsKkAw5vscz71xNPZSDGUeHUWTkPbR4dkyT1PshYVAHJ4lPUE/i2arYdlORSxH
+        7kPRZYGiSUj7xOFZPdAgiKURUNjsPk0uBCK9QZVoLlaACOXupROwDaQqYAg1124+QDjbWZVL0SSkfcxC
+        IBVJTRdEE6tnJYZojvN7mqR2+lU0j/+s3MvsRv+esqFaGyiahLSPLgRSooAG8YzeZ+FwAw7Pkp6gX0Wz
+        ai5zsYaVIT5VgaJJSPt40RTS1hOkhcLw7MzMzLjE9DRJvfSjaFbd82vvvpJt0w1avSuKJiHtY0RTvUsV
+        TKQLB7YLnNMkvUE/iibEqSws9j7DKm+ToklI+2Q8TYs/sF2HZ+lpknpp5bX9UP5h7zb46kjuXtqlTLiw
+        FSRXv5vgqL6yQNEkpH3cQqBEtIUTgSTW72kGT5MfoSa1UyWavbrlpGwl62IOzSrYG1oWKJqEtE+ZpxlF
+        s2lOU+DwLKmffhPNborWfMFxc7lA0SSkfVQ0IZJCmNcUNPZfOQnDs9xyQmqn30Sz6ti8c3VuKs6ozQWK
+        JiHtY0RThTJ5mdEWjtETIJrhGD2KJqmdfhPNqvudr9h0SpnYUTQJaZ/c8Gz0OlU49XCDJJoCh2dJvVA0
+        O4eiScjCiaKZ9mZqHMHwbPg0mMQUTdI7UDQ7B+KYCxRNQtoHoumE0pLmNIW0EIjDs6R2KJqdQ0+TkIWT
+        G54V7IKg8D1NuxBIYnqapF76TTS5EKgciibpJ6xoeo9T8roQyG85oadJ6qXfRPOw3FNZOPbTo9k23QYi
+        lAsUTULaR4dno0AG4UQaseSbtpwIFE1SP/0mmqAsdPNzYFWUHa5A0SSkfaqGZ0U49exZ62kuFyiapF76
+        UTTLDhd451dvZet3k6r3RdEkpH0yomlX0oY5TYEnApHeoh9Fs0xsEB747v3ZNt0C5+aWBYomIe1T4mkq
+        BdHE9zQlhmieL1A0SX30o2g+/frj8Q6bQ6fC1SlV3/GkaBLSPnFO85MigVYow/BsjJsON+CB7aR2+lE0
+        q86fxZdOFsvbfPr1J+JV8oGiSUj7qKcZh2JVOBVdCMThWdJb9KNoAghBWVgMb/Pw979Q6WUi1C2aZdtx
+        Fvr9UkIWAzs8q3OZJg8hzW05oWiSeulX0ay6b3ibELlcu/lSNY+qoW7RrPLAF3uul5BOKZvThIBG0cTq
+        WWw52SJpFU2uniX10q+iCeBBlQV4hd0SzuNvPh97rQ51iybo1nYYQhabqoVAKpqCXwhET5PUSz+LZtW9
+        I3RDOE+/fTL21jr0gmiW9bkY3jchCyEuBLJCaWN/9uy6eIwePU1SL/0smqCtYdM3O/ey8F7e+fVbsYdi
+        wCEKudALoln1e3bT+yZkoURPM+3NVJAXuBCI9CZV/8gee+OZsL3jXNPJP+yYx6saptUAwYBIPfKTckF6
+        UK6LZ261yAj3mAu9IJqg1ft47d1X5BmeCO8Cz2yhqJJzhRmetatnNV0QzYmJCW45Ib1BqyHOOsJTIkq5
+        ey0DHnE7wmkDThWCOAKky+YCbdBj+npdNBfym3b67gmZLyqa0dMsfFdTQB6rZwufBhMomqReBkE0wXyE
+        s5Ngz7Ute2e9Iprg+M/aW7zkA0WTnCtKFgKpp1lYCCTwI9SkNxgU0QQQzqqh1fkG//WUfhBNMB/hpGiS
+        c4UXTfUwY15FkwuBSG8xSKKpoH03vE4I8MMvP9TUf9nnyXpNNEGn74KiSc4VVjTjcKxdFJSd0xToaZJ6
+        GUTRVNBP2QrYqgCxrBKufhJNBe+iHS+coknOFW5O0xM8zXi4QZjTjJ4mRZPUC1afPvLjL/UU3T69BsO2
+        j7765TAv+drPXwniATHVxUCwoezpM4+3de2yd9bpFp0/Ei82189int6DvnENPOuxN44GkMb76fT+CVkI
+        LeY00z5NiKYebjA7O8vhWUIIIcOHEU0VyoR4n36fJodnCSGEDC8QzczQbFoIJGUqmjh7lqJJCCFkeIme
+        pl38YwmeJuY0JbaeJodnCSGEDB8lnqZyCzzNjGjS0ySEEDJ82IVAIpAFjzPmIZp+ywk9TUIIIcOH8zTt
+        XCbi4GlKTE+TEEIIcZ6miqemwz5NgZ4mIYQQYkXTI8KZtpzEww3WrV+/frnE9DQJIYQMH1E0q1bP2q+c
+        BE+TnwYjhBAylKinaUTTHnKQVs+Kp4l9mvw0GCGEkOElNzxrBDQdoydweJYQQshwYz1NBflI2HIisR6j
+        R0+TEELI8OI8TTs0i7TOafqzZ7l6lhBCyPCRE83M8GxBNLkQiBBCyFBS4Wlq3osm5jTpaRJCCBk+/EIg
+        9TJjnIZn9SPUAj1NQgghw4kXTUfap2lFU6BoEkIIGT7KPM2Inj3L1bOEEEKIEU0/nxlsEE37lZPp6WmK
+        JiGEkOFERVPE0R6lpwIKTzO35YSiSQghZPgwoqmCafEnAq2lp0kIIWRosXOaUTjTMK3kmw43KIrmqcaz
+        uU4JIYSQQeSu53b/SOQviabzOMM+TRzYLnHW03zMd0gIIYQMKnd8bfZZkb/kZapwal5IC4GEomgeONU4
+        lOuUEEIIGURu/MNrvijyFzxLEcowNBsFE4Q5TRHNKyXeJKydmZkZT4cb7D/d2JjrlBBCCBlEtu/f+nmR
+        P4ilF0x4nbskvl64cnR0dNPk5OSUpMeF84X3g3TyS98pIYQQMmh87vid74rsWaEspAUIKURzx9jY2CUS
+        XwBPU+KCaHJekxBCyMCz9+htp0X2rEgmRDwhmPA0r1u6dOl2iS9euXLlaolHhbOiefBkYzbXOSGEEDJI
+        XP0HOx4U2QvepfMwAUTz5pGRkWtEND8q6RlhpbBUOE84G6QzDtESQggZWHJDsw49DWjn6OjoVomnhUlh
+        RCiK5sFTjSO5ixBCCCGDwOyRG74iclcQTUmHxUARfxqQfkvz/ZWzNhw60VglndLbJIQQMnDAy3RimdIR
+        XTl7nXCFsHHFihVrJMYioA/Ozc1J5IJ0fNhfiBBCCOl3Zv/4+j8TmfNCGYC3GT3OmzCfKfHlwoWrV69O
+        85kimsXhWQ3S+Rl/MUIIIaRf0bnMHNHjhGhiaDbszxQwNLtewNCszmfmRfPAqcZVuYsSQggh/cimT23c
+        L/LWNCSrgilAMG8Sro2rZjcI2Goylk4CqgpyEQ7TEkII6Xt2x3NmK9C9mboAaIvwIWFCCF5m6dCsDXIx
+        HnhACCGkb9nz9U99W71L62VKOqyYhU2AYN4Y5zI/ImyIBxqEBUBC++HAqcaJ3I0QQgghvYz9/JeQtpUY
+        8dRh2ZuFjy9duhQrZnFA+7q1a9cmL1NoP2AbCoWTEEJIP7HvmdtOT10+tUdkTAUy4URTD2fHZ8AuGx8f
+        v1BirJgdO3LkyPnZbSbtBLkJDtUSQgjpeTAkK7JVEMpI+G6mpgWdx9wphGFZAfsyl83Ozi6RuDMv0we5
+        GS4OIoQQ0pPc98K+33z6q7ueFLlSUQwCaYRS7QBDsiqY24SNwloBw7LYl3n2cPaFhN978c5LDpxqvJ27
+        YUIIIaQO7vnmHWc2zl6UtpUISTQNsOkcpgomtpfg8184Lg9nzIavmbS1WraTIMJ5iOJJCCGkTnBogZ4n
+        KwShdJ5lQGwQSwzHQjAxh3n10qVLt42Ojl4qaRxiEOYxhfxxeV0K5913ct/vH3ip8U7uYQghhJDFAJ4l
+        jsVbvWX1Z0WLVBibxFJQ7zJsKxFwriwW/eCYPAzJro9H5algwsPsrpeJYFzX83Bawr3f2HPd/u/s/YsD
+        L+z7x9wDEkIIIQvhd/96z7/goIJri9/DLPMu8YkvFUuc9PNxYad4lzskvkzAoh/MYa4Qxrqy8KedAPEE
+        8ZghjAVPbrl7y6W3//ktd+87euuf3vVXu79x13O7/+bub+x+8a5nbz8pvNT4y9tONZ657W+VfUdvO+3B
+        l7VBzu7Lfb2yvLeXYesh7fO+zNos3l5Wz2Lr+LTmfVrrVGHr5dqU9VdVt8yW68u3Qd7b1O7Lfb1WZd5e
+        VsfmO6nfyu7RejbOtfU2rWftOVs7ZYqWtWpvy3Npa/NUtW8X34e1+3Jfryzv7WXYekj7vC+zNou3l9Wz
+        2Do+rXmf1jpV2Hq5NmX9VdUts+X68m2Q9za123Ksgr31q7uehEiKR7knI4xhNawSbUEoJX+TAM8SYolD
+        C3CeLFbIXrps2bIPS4xVsjhXFroF/Vp8wdSgwilJrDbCqqNlwqqJiQlMrF40Ojq6KZ7ld+XIyMhOAe4x
+        xpTxUBhfxv8I8L8BPKz+78CSykrw5chbG16g2jQdrmmvZdK2bS6fs/u00lRurwl7vI90X7AhlrwOK6S6
+        Nu/7MbH2h/aIUz3YYx2tG+rEfCmxHdKFuujbYspQT/G2kI9twjOatqGO6ysgNn0mXxb6RBvfDm1iOten
+        tRX6yNRNxLLSazqarpupb/tCOuVjeUJtvszl0zsVmvoy6VBm0unaiGNba0v4/mK+UE/rmPJCOuZDG421
+        jqYjTdd3+HLkra3wLPaa9lombdvm8jm7TytN5faasMf7SPcFG2LJ+z/rtr+mfkys/YW/27Ye7LGO1g11
+        Yr6U2A7pQl30bTFlqKd4W8jHNunParSHOq6vgNj0mXxZ6DOWIw2hhL5cK1pztcTwLD8iOoQD2C8SoEsY
+        jh3fuXMnDi84t4LpAi4MlmzevBnqPRG/RYZJVrjCuGmMI2+Xh8H5fkFAheuB5LGaCWja2hFrXgn11SYv
+        zLZP5QbfJtgyfRb6cv2HOjYdCXVMv+EaqGf60nrBZuyFPhHbfmJ5qmPuN7VBOlIoc/WbsO1j2qN1NW3j
+        gs3cc+E9IB/RvLWnvG2j96I2/wy+HJj7TzaD2tK92Wc32HxTP/Y+ctfL2fz13LPY+taWfhvE5jmb6iF2
+        5YV62k/E1ynURR592f7cM6k95DPPEmK1m2trm5DXPhErtlxj91zZd+eulerGtMW3CbZMn4W+XP+hjk1H
+        Qh3Tb7gG6pm+tJ5/5kKfiG0/sTzVMfeb2iAdKZS5+k3Y9jHt0bqatnHBZu658B6Qj2je2lPettF7UZt/
+        Bl9u0nDIsCIWXuV2AXqDE34gltCh1fGkn1EzHFubYIYgHqfOd0K9cVOYXMUy3tXR88RpCxcLeJAgoAL+
+        J4CHhJAG5AUU8hF4qiGOWLvaAjaPNrGd9mvRPnJoe1vX523dXByuHdvYWOs01Tf5ZHPX1HTIm758nOqY
+        uAxbHp5R79Xir2XuKxDL7XOmurnY9Kc05TN9WHJl9j60fShHOpLqgpgv1ENsbIlYBrQ89OX6zKVzFMrR
+        h/Zj+vP3k+wl+OsXiP36OimduZYtD6COqxeI9oJNCPlo1zJNZzF9W3zf1q62gM2jTWyn/Vq0jxza3tb1
+        eVs3F4drxzY21jpN9U0+2dw1NR3ypi8fpzomLsOWh2fUe7X4a5n7CsRy+5ypbi42/SlN+UwfFluGI/Aw
+        orkVo5sSb8AwbNQdnCM7CWcO3mWcTqxXLHMBRxBJBOAC4+BbjB/DLYb3uVYeaHp8fPyisbExrGDCsl88
+        aIjx0HEpcLIZkFesXctSPvZjy7T80th/VR+F+jG2dXx5qmP6DjafjyRbLFe7JVvf4p4jxGJL9U1a+0ll
+        kWDTfkx/WlaZR/+2Tbye1gtxLC/YtY1pq2WaTm1NHV9eaCP1bF7vJeXL7O4aod+YD2nYXRu1FfLRZu/D
+        trH1lUJ5Jt9E7Fuv0VQ/XsOW2TiXDnl3b6mevQ7SEa1T6MPmYztrt4T7jBTsiGFDmbUZQv8Ra9eylI/9
+        2DItD9c2eUuq49K+ji9PdUzfwebzkWSL5Wq3ZOtb3HOEWGypvklrP6ksEmzaj+lPyyrz6N+2idfTeiGO
+        5QW7tjFttUzTqa2p48u1DfZZboSeSIyvk2CBz5q4Kha6A+ctDcVGx673ArzOGHCDEE94npjzxANg3hMe
+        aBDROIw7pUxOTgZi/gJbBrRM/hexVtOmflO+LK15b7Nludhj7bk6uE9vA2X9KWXlsb8Lctf1cTvEutl7
+        FML7L+tP7Pr7lLWvevbS37YsXwXqZuqHd+VsAV/fpv1v5vttkW96ZpQrvsxiyzXtY8H2n32/rWjRZ7CX
+        /blVpE72vQLTb0t8XeSNrfTPCP/+N1/Xx+0Q65b91uH9l/Undv19ytpXPXvpb1uWLwH6IRq5euXU1BR0
+        RYUSegPdgf70plDmgopnjIOARvd4SZyIxfwnHhDeqAXCmtLT09M2n2VmZialN27caPtcZsvUhtjYbV6v
+        5esUiPekdXPYMv3PQugv3l/K6zVsOuLv3fZZSLt6wRbRtC8PZNoFSt65vU5Ix/wyfecl9+HTiFNfZW0y
+        dkvow+Vtedauz5V5PuTVFmJ9NpNO2HzJfab+TXn4s2yujdi+x4TmfVnZ72Lz+lu466Ryxd2Lp2DP1TP3
+        FcpsHdu3tdvnUlsGey3+/Tf5srSrF2wRTfvyQKZdoOSd2+vYP7d1/P1XcF3oiIok9MUKZf8IZi7ANTYC
+        quhQLh42EIVVBVZjWxZiYIaCbT+2TcGWsVtbIS2kthqXlPt0zna+3muuD7XFOiEdbVo/tIXd1omkPnL9
+        aFlVHrh36eul92dttiymUx1rQx0t03tz5ZZ0/Ry2b9OHv+fKPiyZPprurywdQX39fTVv40SmrRL60Dzq
+        KdauZdFm33uhvbGFtKmn9lz9gF7X9V24bsbWFJv2wYb34/9c5tA+XWzLQgzcn1nt27+XZMvYra2QFlJb
+        jUvKfTpn49//WKb35sot6fo5TN/6Tq2e6NoaBgYGBgYGhvrCBz7w/8M1IQqX+DbuAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
