--- a/id-verification-system/Courses.resx
+++ b/id-verification-system/Courses.resx
@@ -4623,7 +4623,7 @@
         SUVORK5CYII=
 </value>
   </data>
-  <data name="enrollBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="addBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAWMAAACyCAYAAACX167fAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         DAAACwwBP0AiyAAAIfVJREFUeF7tnWusHVd1x/PwfTjXxo/YcQxOcGIHYgfsJI6dd3qBklKw8UGqFcex
@@ -4981,7 +4981,7 @@
   <data name="spCoursesBtn.ErrorImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAmQAAACjCAYAAAAkYwKZAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAALIJJREFUeF7t3Qt0HNWBJmDLQGCGZMdhIJmE7OCdYWZZ2ExImJkNy26sk2TPjHN8
+        DAAACwwBP0AiyAAALIJJREFUeF7t3Qt0HNWBJmDLQGCGZMdhIJmE7OCdYWZZ2ExImJkNy26sk2TPjHN8
         zCs+AbKAD+whnJwQIDAwJsuKBPCgrA92vAQ74MRmCAYcwGFhwcZgHuMxr2AZC/Py28IPybIlS7JsSa3W
         /v+tW6KrVVVd3V3dXV36v3MKyVW3bt0qqVU/99ZjQqWNjIxMxjQT01xMyzG1YNqGSURERCRpmFGYVZhZ
         mjCdh2myjTX1BQ1vxMQApuAlIiIiacBMsxhTo407yYQGTsJ0G6YuTCIiIiJpxXB2Oabk9JyhMQpiIiIi
@@ -5177,7 +5177,7 @@
   <data name="spCoursesBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAmQAAACjCAYAAAAkYwKZAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAALJ1JREFUeF7t3Qt0HNWBJmDLQGCGZMdhIJmE7OCdYWZZ2ExImJkNy26sk2TPjHN8
+        DAAACwwBP0AiyAAALJ1JREFUeF7t3Qt0HNWBJmDLQGCGZMdhIJmE7OCdYWZZ2ExImJkNy26sk2TPjHN8
         zCs+AbKAD+whnJwQIDAwJsuKBPCgrA92vAQ74MRmCAYcwGFhwcZgHuMxr2AZC/Py28IPybIlS7JsSa3W
         /v+tW6KrVVVd3V3dXV36v3MKyVW3bt0qqVU/99ZjQqWNjIxMxjQT01xMyzG1YNqGSURERCRpmFGYVZhZ
         mjCdh2myjTX1BQ1vxMQApuAlIiIiacBMsxhTo407yYQGTsJ0G6YuTCIiIiJpxXB2Oabk9JyhMQpiIiIi
@@ -5777,7 +5777,7 @@
   <data name="spDashboardBtn.ErrorImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAmQAAACgCAYAAACi93A3AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAMM9JREFUeF7tnQ+QHNV957WAnWDHZcq5SlyJL2CnXE5wncNZdbG5qzpUdxwXKQ7g
+        DAAACwwBP0AiyAAAMM9JREFUeF7tnQ+QHNV957WAnWDHZcq5SlyJL2CnXE5wncNZdbG5qzpUdxwXKQ7g
         yylx/gA6cLiz62yLKkAug2+JwQ44GP2zsQ3GEmXLYBmQk+CVhI0lEWSBEMhIyFpJi1di9We1oF0haVfa
         P7Pc9/vm9Xhmtl93z0x3z5uZ76fq7czO+733fq/7db9vv/e6e1bWvPHGGxcgLEBYjLAGYTtCP4IQQggh
         RB6MIFB/bECgHrkG4SIrVdoXVHKOrbCElxBCCCF8hTplBcKVVsK0PqjMeQi3IVCFCiGEEEK0EoE4u8BK
@@ -5991,7 +5991,7 @@
   <data name="spDashboardBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAmQAAACgCAYAAACi93A3AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAMM9JREFUeF7tnQ+QHNV957WAnWDHZcq5SlyJL2CnXE5wncNZdbG5qzpUdxwXKQ7g
+        DAAACwwBP0AiyAAAMM9JREFUeF7tnQ+QHNV957WAnWDHZcq5SlyJL2CnXE5wncNZdbG5qzpUdxwXKQ7g
         yylx/gA6cLiz62yLKkAug2+JwQ44GP2zsQ3GEmXLYBmQk+CVhI0lEWSBEMhIyFpJi1di9We1oF0haVfa
         P7Pc9/vm9Xhmtl93z0x3z5uZ76fq7czO+733fq/7db9vv/e6e1bWvPHGGxcgLEBYjLAGYTtCP4IQQggh
         RB6MIFB/bECgHrkG4SIrVdoXVHKOrbCElxBCCCF8hTplBcKVVsK0PqjMeQi3IVCFCiGEEEK0EoE4u8BK
